--- a/frontend/templates/header.html
+++ b/frontend/templates/header.html
@@ -15,7 +15,7 @@
             </li>
             <li><a href="">Hỏi đáp</a></li>
             <li><a href="./login.html"><img src="./frontend/assets/icons/profile.png" alt="" class="icon-size">&nbsp;Đăng nhập</a></li>
-            <li class="menu"><img src="./frontend/assets/icons/list.png" alt="" class="icon-size"></li>
+            <li class="menu"><button class="button-menu" id="openModalBtn"><img src="./frontend/assets/icons/list.png" alt="" class="icon-size"></button></li>
         </ul>
     </nav>
 </div>
@@ -35,3 +35,24 @@
         </li> 
     </ul>
 </div>
+
+
+
+<div id="myModal" class="modal">
+    <div class="modal-content">
+        <span class="close" id="closeModalBtn">&times;</span>
+        <ul>
+            <li><button>Item1</button></li>
+            <li><button>Item2</button></li>
+            <li><button>Item3</button></li>
+            <li><button>Item4</button></li>
+            <li><button>Item5</button></li>
+            <li><button>Item6</button></li>
+            <li><button>Item7</button></li>
+            <li><button>Item8</button></li>
+        </ul>
+        <!-- <p>Bạn có thật sự muốn xóa? Hành động không thể hoàn tác!!!</p>
+        <button class="button-add">Trở lại</button>
+        <button class="button-delete">Xóa</button> -->
+    </div>
+</div>  
