--- a/frontend/assets/css/style.css
+++ b/frontend/assets/css/style.css
@@ -145,8 +145,11 @@ html{
   color: black;
   font-size: large;
 }
-
-
+.button-menu{
+  background-color: #0f172a;
+  border: none;
+  cursor: pointer;
+}
 .header-main{
   height: auto;
   background-color: #00F260;
@@ -354,6 +357,47 @@ html{
   animation: scroll_4013 0.5s linear infinite;
   transform: translateY(40%);
 }
+
+/* Modal trang web */
+.modal {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: 1000;
+}
+
+.modal-content {
+    background-color: #fefefe;
+    /* margin: 15% auto; */
+    margin-left: auto;
+    padding: 5px 20px;
+    border: 1px solid #888;
+    width: 90%;
+    height: 100%
+}
+
+.close {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+    cursor: pointer;
+    border: 1px solid #dcdcdc;
+    padding: 0 10px;
+    border-radius: 4px;
+}
+
+.close:hover {
+    color: black;
+    text-decoration: none;
+}
+
+
+
 /*----------------------------------------- CSS cho phần keyframes---------------------------- */
 @keyframes scroll_4013 {
   0% {
