--- a/frontend/assets/css/style.css
+++ b/frontend/assets/css/style.css
@@ -377,7 +377,8 @@ html{
     padding: 5px 20px;
     border: 1px solid #888;
     width: 90%;
-    height: 100%
+    height: 100%;
+    min-width: 535px;
 }
 
 .close {
