--- a/frontend/templates/header.html
+++ b/frontend/templates/header.html
@@ -40,19 +40,31 @@
 
 <div id="myModal" class="modal">
     <div class="modal-content">
-        <span class="close" id="closeModalBtn">&times;</span>
-        <ul>
-            <li><button>Item1</button></li>
-            <li><button>Item2</button></li>
-            <li><button>Item3</button></li>
-            <li><button>Item4</button></li>
-            <li><button>Item5</button></li>
-            <li><button>Item6</button></li>
-            <li><button>Item7</button></li>
-            <li><button>Item8</button></li>
-        </ul>
-        <!-- <p>Bạn có thật sự muốn xóa? Hành động không thể hoàn tác!!!</p>
-        <button class="button-add">Trở lại</button>
-        <button class="button-delete">Xóa</button> -->
-    </div>
-</div>  
+        <span class="close" id="closeModalBtn"><img src="/frontend/assets/icons/close.png" alt=""></span>
+        <div class="user-account"><img src="/frontend/assets/icons/profile.png" alt="" class="icon-size">Lê Văn Quý</div>
+        <div class="menu-nav">
+            <ul>
+                <li><button>Website</button></li>
+                <li><button>Mobile App</button></li>
+                <li><button>Adruino</button></li>
+                <li><button>Đồ chơi công nghệ</button></li>
+                <li><button>Tool hỗ trợ</button></li>
+                <li><button>Dịch vụ khác</button></li>
+                <li><button>Item7</button></li>
+                <li><button>Item8</button></li>
+                <li><button>Item9</button></li>
+            </ul>
+            <ul>
+                <li>Tin tức- Thủ thuật</li>
+                <!-- <li></li> -->
+                <li>Hỏi đáp</li>
+                <li>Chính sách</li>
+                <li>Liên hệ Admin</li>
+            </ul>
+            <ul>
+                <li>Cài đặt</li>
+                <li>Đăng xuất</li>
+            </ul>
+        </div>
+        </div>
+</div>
