--- a/frontend/assets/css/style.css
+++ b/frontend/assets/css/style.css
@@ -360,44 +360,69 @@ html{
 
 /* Modal trang web */
 .modal {
-    display: none;
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.5);
-    z-index: 1000;
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 1000;
 }
 
 .modal-content {
-    background-color: #fefefe;
-    /* margin: 15% auto; */
-    margin-left: auto;
-    padding: 5px 20px;
-    border: 1px solid #888;
-    width: 90%;
-    height: 100%;
-    min-width: 535px;
+  background-color: #fefefe;
+  /* margin: 15% auto; */
+  margin-left: auto;
+  padding: 5px 20px;
+  border: 1px solid #888;
+  width: 90%;
+  height: 100%;
+  /* min-width: 535px; */
 }
 
 .close {
-    color: #aaa;
-    float: right;
-    font-size: 28px;
-    font-weight: bold;
-    cursor: pointer;
-    border: 1px solid #dcdcdc;
-    padding: 0 10px;
-    border-radius: 4px;
+  float: right;
+  font-weight: bold;
+  cursor: pointer;
+  border: 1px solid #dcdcdc;
+  border-radius: 4px;
+  width: 32px;
+  height: 32px;
+  padding: 4px;
 }
 
+.close img{
+  width: 100%;
+}
 .close:hover {
-    color: black;
-    text-decoration: none;
+  background-color: orangered;
+  text-decoration: none;
 }
+.menu-nav{
+  width: 100%;
+  border: 1px solid #dcdcdc;
+  padding: 4px;
+  border-radius: 4px;
 
-
+}
+.menu-nav ul{
+  display: flex;
+  flex-wrap: wrap;
+}
+.menu-nav ul li{
+  width: 24%;
+  margin: 4px;
+  /* max-width: 120px; */
+}
+.menu-nav ul li button{
+  width: 100%;
+  height: 100%;
+  font-size: 1rem;
+  padding: 8px;
+  border-radius: 4px;
+  border: 1px solid #888;
+}
 
 /*----------------------------------------- CSS cho phần keyframes---------------------------- */
 @keyframes scroll_4013 {
