--- a/frontend/assets/css/style.css
+++ b/frontend/assets/css/style.css
@@ -411,8 +411,8 @@ html{
   flex-wrap: wrap;
 }
 .menu-nav ul li{
-  width: 24%;
-  margin: 4px;
+  width: 32%;
+  margin: 0.65%;
   min-width: 100px;
 }
 .menu-nav ul li button{
