--- a/frontend/templates/header.html
+++ b/frontend/templates/header.html
@@ -47,7 +47,7 @@
                 <li><button>Website</button></li>
                 <li><button>Mobile App</button></li>
                 <li><button>Adruino</button></li>
-                <li><button>Đồ chơi công nghệ</button></li>
+                <li><button>Đồ&nbsp;chơi công&nbsp;nghệ</button></li>
                 <li><button>Tool hỗ trợ</button></li>
                 <li><button>Dịch vụ khác</button></li>
                 <li><button>Item7</button></li>
@@ -62,7 +62,7 @@
             </ul>
             <ul>
                 <li>Cài đặt</li>
-                <li>Đăng xuất</li>
+                <li>Đăng&nbsp;xuất</li>
             </ul>
         </div>
         </div>
