--- a/frontend/assets/css/style.css
+++ b/frontend/assets/css/style.css
@@ -372,13 +372,11 @@ html{
 
 .modal-content {
   background-color: #fefefe;
-  /* margin: 15% auto; */
   margin-left: auto;
-  padding: 5px 20px;
+  padding: 10px 20px;
   border: 1px solid #888;
   width: 90%;
   height: 100%;
-  /* min-width: 535px; */
 }
 
 .close {
@@ -404,7 +402,6 @@ html{
   border: 1px solid #dcdcdc;
   padding: 4px;
   border-radius: 4px;
-
 }
 .menu-nav ul{
   display: flex;
@@ -413,15 +410,16 @@ html{
 .menu-nav ul li{
   width: 32%;
   margin: 0.65%;
-  min-width: 100px;
+  min-width: 75px;
 }
 .menu-nav ul li button{
   width: 100%;
   height: 100%;
-  font-size: 1rem;
+  font-size: 0.8rem;
   padding: 8px;
   border-radius: 4px;
   border: 1px solid #888;
+  color: black;
 }
 
 /*----------------------------------------- CSS cho phần keyframes---------------------------- */
