--- a/frontend/templates/header.html
+++ b/frontend/templates/header.html
@@ -41,7 +41,7 @@
 <div id="myModal" class="modal">
     <div class="modal-content">
         <span class="close" id="closeModalBtn"><img src="/frontend/assets/icons/close.png" alt=""></span>
-        <div class="user-account"><img src="/frontend/assets/icons/profile.png" alt="" class="icon-size">Lê Văn Quý</div>
+        <div class="user-account"><a href="/login.html"><img src="/frontend/assets/icons/profile.png" alt="" class="icon-size">Đăng nhập</a></div>
         <div class="menu-nav">
             <ul>
                 <li><button>Website</button></li>
@@ -55,7 +55,7 @@
                 <li><button>Item9</button></li>
             </ul>
             <ul>
-                <li>Tin tức- Thủ thuật</li>
+                <li>Tin tức - Thủ thuật</li>
                 <li>Hỏi đáp</li>
                 <li>Chính sách</li>
                 <li>Liên hệ Admin</li>
