--- a/frontend/assets/css/style.css
+++ b/frontend/assets/css/style.css
@@ -409,7 +409,7 @@ html{
 .menu-nav ul li{
   width: 24%;
   margin: 0.5%;
-  min-width: 75px;
+  min-width: 70px;
 }
 .menu-nav ul li button{
   width: 100%;
@@ -419,6 +419,7 @@ html{
   border-radius: 4px;
   border: 1px solid #888;
   color: black;
+  cursor: pointer;
 }
 .menu-nav ul:last-child{
   justify-content: space-between;
